--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
         <title>The Upstairs</title>
         <link rel="stylesheet" href="./index.css">
     </head>
-    <body>
-        <script src="index.js"></script>
 
+    <body id="front">
         <div class="middleDiv">
             <p class="title">LORE.</p>
-            <input placeholder="Press F1 for help.">
+            <input id="text-input" placeholder="Press F1 for help.">
         </div>
 
         <div id="tl" class="corner" onclick="cornerUpdate(this)"></div>
@@ -34,5 +33,7 @@
                 <p class="ppr">Peter Paul Rubens</p>
             </div>
         </div>
+        
+        <script src="index.js"></script>
     </body>
 </html>
